Fix bug regarding to jumpy transition effect
Add secondary container to stop content from being jittery
by resizing the sidebar

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,17 @@
 }
 
 .sidebar{
-    min-width: 20vw;
+    width: 0;
     min-height: 100vh;
     position: fixed;
     background-color: peachpuff;
+    z-index: 1;
+    overflow-x: hidden;
+    transition: width 1s;
+}
+
+.sidebar-child{
+    width: 20vw;
     display: flex;
     flex-direction: column;
     gap: 4em;
@@ -38,6 +45,7 @@ form fieldset{
     flex-direction: column;
     gap: 1em;
     padding: 1em 2em 0;
+    
     
 }
 
@@ -64,4 +72,6 @@ legend{
     margin-top: 1.5em;
     font-size: 1.5em;
     font-weight: 400;
+    
 }
+
